--- a/src/components/main.css
+++ b/src/components/main.css
@@ -6,10 +6,18 @@ body {
       rgba(255, 123, 0, 0.2)
     ),
     url("./images/landscapePalm.jpg");
-  backdrop-filter: blur(5px);
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+  animation: moveIt 10s linear infinite;
+}
+@keyframes moveIt {
+  from {
+    background-position: bottom left;
+  }
+  to {
+    background-position: top right;
+  }
 }
 .navbarLogo {
   height: 3%;
@@ -92,5 +100,13 @@ body {
   position: absolute;
   top: 150px;
   right: 150px;
-  border: 5px #d36415 solid;
+  border: 2px #d36415 solid;
+}
+.githubButton-css {
+  font-family: "Rubik", sans-serif;
+  position: absolute;
+  top: 450px;
+  right: 150px;
+  width: 335px;
+
 }
